--- a/yuanxiaojie/css/style.css
+++ b/yuanxiaojie/css/style.css
@@ -4,5 +4,6 @@ canvas {
 
 .block-audio {
   display: none;
+  
 }
-body{padding: 0px;margin: 0px}
+body{padding: 0px;margin: 0px;text-align:center}
